@@ -18,11 +18,16 @@ import net.minecraft.block.entity.BlockEntity;
 import net.minecraft.component.DataComponentTypes;
 import net.minecraft.component.type.ContainerComponent;
 import net.minecraft.component.type.FireworksComponent;
+import net.minecraft.component.type.ItemEnchantmentsComponent;
 import net.minecraft.component.type.PotionContentsComponent;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.entity.player.PlayerInventory;
 import net.minecraft.inventory.Inventories;
 import net.minecraft.item.*;
+import net.minecraft.item.trim.ArmorTrim;
+import net.minecraft.item.trim.ArmorTrimMaterial;
+import net.minecraft.item.trim.ArmorTrimPattern;
+import net.minecraft.item.trim.ArmorTrimPatterns;
 import net.minecraft.nbt.NbtCompound;
 import net.minecraft.nbt.NbtElement;
 import net.minecraft.nbt.NbtList;
@@ -31,7 +36,9 @@ import net.minecraft.network.packet.Packet;
 import net.minecraft.network.packet.s2c.play.BlockEntityUpdateS2CPacket;
 import net.minecraft.recipe.*;
 import net.minecraft.registry.Registries;
+import net.minecraft.registry.RegistryKey;
 import net.minecraft.registry.RegistryWrapper;
+import net.minecraft.registry.entry.RegistryEntry;
 import net.minecraft.registry.tag.TagKey;
 import net.minecraft.screen.PropertyDelegate;
 import net.minecraft.screen.ScreenHandler;
@@ -50,6 +57,7 @@ import java.util.stream.Collectors;
 
 import static com.coolerpromc.uncrafteverything.config.UncraftEverythingConfig.tryParseTagKey;
 
+@SuppressWarnings({"unused", "deprecation"})
 public class UncraftingTableBlockEntity extends BlockEntity implements ExtendedScreenHandlerFactory<BlockPos>, ImplementedInventory {
     public static final int NO_RECIPE = 0;
     public static final int NO_SUITABLE_OUTPUT_SLOT = 1;
@@ -63,7 +71,7 @@ public class UncraftingTableBlockEntity extends BlockEntity implements ExtendedS
     private List<UncraftingTableRecipe> currentRecipes = new ArrayList<>();
     private UncraftingTableRecipe currentRecipe = null;
     private PlayerEntity player;
-    private PropertyDelegate data;
+    private final PropertyDelegate data;
     private int experience = 0;
     private int experienceType; // 0 = POINT, 1 = LEVEL
     private int status = -1;
@@ -117,6 +125,11 @@ public class UncraftingTableBlockEntity extends BlockEntity implements ExtendedS
     @Override
     public ItemStack removeStack(int slot) {
         getOutputStacks();
+        if (slot != 0){
+            if (player != null){
+                handleRecipeSelection(currentRecipe);
+            }
+        }
         return ImplementedInventory.super.removeStack(slot);
     }
 
@@ -223,7 +236,7 @@ public class UncraftingTableBlockEntity extends BlockEntity implements ExtendedS
                 || this.getStack(inputSlots[0]).getDamage() > 0
                 || UncraftEverythingConfig.isItemBlacklisted(this.getStack(inputSlots[0]))
                 || UncraftEverythingConfig.isItemWhitelisted(this.getStack(inputSlots[0]))
-                || !UncraftEverythingConfig.isEnchantedItemsAllowed(this.getStack(inputSlots[0]))
+                || (!UncraftEverythingConfig.isEnchantedItemsAllowed(this.getStack(inputSlots[0])) && !inputStack.contains(DataComponentTypes.TRIM))
                 || (inputStack.getItem() == Items.SHULKER_BOX && inputStack.get(DataComponentTypes.CONTAINER) != ContainerComponent.DEFAULT)
         ) {
             if (this.getStack(inputSlots[0]).getDamage() > 0){
@@ -238,7 +251,7 @@ public class UncraftingTableBlockEntity extends BlockEntity implements ExtendedS
                 this.status = RESTRICTED_ITEM;
             }
 
-            if (!UncraftEverythingConfig.isEnchantedItemsAllowed(this.getStack(inputSlots[0]))){
+            if (!UncraftEverythingConfig.isEnchantedItemsAllowed(this.getStack(inputSlots[0])) && !inputStack.contains(DataComponentTypes.TRIM)){
                 this.status = ENCHANTED_ITEM;
             }
 
@@ -265,6 +278,10 @@ public class UncraftingTableBlockEntity extends BlockEntity implements ExtendedS
                 if (shapedRecipe.result.getItem() == inputStack.getItem() && inputStack.getCount() < shapedRecipe.result.getCount()){
                     this.status = NO_ENOUGH_INPUT;
                 }
+                if (!UncraftEverythingConfig.isEnchantedItemsAllowed(inputStack)){
+                    this.status = ENCHANTED_ITEM;
+                    return false;
+                }
                 return shapedRecipe.result.getItem() == inputStack.getItem() && inputStack.getCount() >= shapedRecipe.result.getCount();
             }
 
@@ -272,11 +289,40 @@ public class UncraftingTableBlockEntity extends BlockEntity implements ExtendedS
                 if (shapelessRecipe.result.getItem() == inputStack.getItem() && inputStack.getCount() < shapelessRecipe.result.getCount()){
                     this.status = NO_ENOUGH_INPUT;
                 }
+                if (!UncraftEverythingConfig.isEnchantedItemsAllowed(inputStack)){
+                    this.status = ENCHANTED_ITEM;
+                    return false;
+                }
                 return shapelessRecipe.result.getItem() == inputStack.getItem() && inputStack.getCount() >= shapelessRecipe.result.getCount();
             }
 
             if(recipeHolder.value() instanceof ShulkerBoxColoringRecipe transmuteRecipe){
                 return inputStack.isIn(ConventionalItemTags.SHULKER_BOXES) && !inputStack.isOf(Items.SHULKER_BOX);
+            }
+
+            if (recipeHolder.value() instanceof SmithingTransformRecipe smithingTransformRecipe){
+                if (!UncraftEverythingConfig.allowUnSmithing()){
+                    return false;
+                }
+                if (!UncraftEverythingConfig.isEnchantedItemsAllowed(this.getStack(0))){
+                    this.status = ENCHANTED_ITEM;
+                    return false;
+                }
+                return inputStack.isOf(smithingTransformRecipe.result.getItem());
+            }
+
+            if (recipeHolder.value() instanceof SmithingTrimRecipe smithingTrimRecipe){
+                if (!UncraftEverythingConfig.allowUnSmithing()){
+                    return false;
+                }
+                ArmorTrim armorTrim = inputStack.get(DataComponentTypes.TRIM);
+                if (armorTrim != null){
+                    Ingredient ingredient = smithingTrimRecipe.addition;
+                    Optional<RegistryEntry.Reference<ArmorTrimPattern>> trimPatternReference = ArmorTrimPatterns.get(this.world.getRegistryManager(), Arrays.stream(smithingTrimRecipe.template.getMatchingStacks()).toList().getFirst());
+                    if (ingredient != Ingredient.EMPTY && trimPatternReference.isPresent() && armorTrim.getPattern().equals(trimPatternReference.get())){
+                        return true;
+                    }
+                }
             }
 
             if (this.status == -1){
@@ -374,8 +420,10 @@ public class UncraftingTableBlockEntity extends BlockEntity implements ExtendedS
 
                 if (inputStack.contains(DataComponentTypes.FIREWORKS)){
                     FireworksComponent fireworks = inputStack.get(DataComponentTypes.FIREWORKS);
-                    for(int i = 1;i < fireworks.flightDuration();i++){
-                        ingredients.add(Ingredient.ofItems(Items.GUNPOWDER));
+                    if (fireworks != null){
+                        for(int i = 1;i < fireworks.flightDuration();i++){
+                            ingredients.add(Ingredient.ofItems(Items.GUNPOWDER));
+                        }
                     }
                 }
 
@@ -394,6 +442,77 @@ public class UncraftingTableBlockEntity extends BlockEntity implements ExtendedS
                             } else {
                                 outputStack.addOutput(new ItemStack(item, 1));
                             }
+                        }
+                    }
+                    outputs.add(outputStack);
+                }
+            }
+
+            if (r.value() instanceof SmithingTransformRecipe smithingTransformRecipe){
+                DefaultedList<Ingredient> ingredients = DefaultedList.of();
+
+                ingredients.add(smithingTransformRecipe.base);
+                ingredients.add(smithingTransformRecipe.addition);
+                ingredients.add(smithingTransformRecipe.template);
+
+                List<List<Item>> allIngredientCombinations = getAllIngredientCombinations(ingredients);
+
+                // Create a recipe for each combination
+                for (List<Item> ingredientCombination : allIngredientCombinations) {
+                    UncraftingTableRecipe outputStack = new UncraftingTableRecipe(smithingTransformRecipe.result);
+
+                    for (Item item : ingredientCombination) {
+                        if (outputStack.getOutputs().contains(item.getDefaultStack())) {
+                            ItemStack stack = outputStack.getOutputs().get(outputStack.getOutputs().indexOf(item.getDefaultStack()));
+                            outputStack.setOutput(outputStack.getOutputs().indexOf(item.getDefaultStack()),
+                                    new ItemStack(stack.getItem(), stack.getCount() + 1));
+                        } else {
+                            outputStack.addOutput(new ItemStack(item, 1));
+                        }
+                    }
+                    outputs.add(outputStack);
+                }
+            }
+
+            if (r.value() instanceof SmithingTrimRecipe smithingTrimRecipe){
+                ArmorTrim armorTrim = inputStack.get(DataComponentTypes.TRIM);
+                Ingredient additionIngredient = smithingTrimRecipe.addition;
+
+                DefaultedList<Ingredient> ingredients = DefaultedList.of();
+                Arrays.stream(smithingTrimRecipe.base.getMatchingStacks()).filter(itemStack -> itemStack.isOf(inputStack.getItem())).forEach(itemStack -> ingredients.add(Ingredient.ofStacks(itemStack)));
+                ingredients.add(smithingTrimRecipe.template);
+                Arrays.stream(smithingTrimRecipe.addition.getMatchingStacks()).filter(itemStack -> {
+                    if (armorTrim != null){
+                        RegistryKey<ArmorTrimMaterial> armorTrimKey = armorTrim.getMaterial().getKey().orElse(null);
+                        RegistryKey<Item> itemResourceKey =  itemStack.getRegistryEntry().getKey().orElse(null);
+                        if (itemResourceKey != null && armorTrimKey != null){
+                            return itemResourceKey.getValue().getPath().contains(armorTrimKey.getValue().getPath());
+                        }
+                    }
+                    return false;
+                }).forEach(itemStack -> ingredients.add(Ingredient.ofStacks(itemStack)));
+
+                List<List<Item>> allIngredientCombinations = getAllIngredientCombinations(ingredients);
+                ItemEnchantmentsComponent itemEnchantments = inputStack.get(DataComponentTypes.ENCHANTMENTS);
+
+                // Create a recipe for each combination
+                for (List<Item> ingredientCombination : allIngredientCombinations) {
+                    UncraftingTableRecipe outputStack = new UncraftingTableRecipe(inputStack.copyWithCount(1));
+
+                    for (Item item : ingredientCombination) {
+                        if (outputStack.getOutputs().contains(item.getDefaultStack())) {
+                            ItemStack stack = outputStack.getOutputs().get(outputStack.getOutputs().indexOf(item.getDefaultStack()));
+                            if (item.getDefaultStack().isOf(Arrays.stream(ingredients.getFirst().getMatchingStacks()).toList().getFirst().getItem())){
+                                stack.set(DataComponentTypes.ENCHANTMENTS, itemEnchantments);
+                            }
+                            stack.setCount(stack.getCount() + 1);
+                            outputStack.setOutput(outputStack.getOutputs().indexOf(item.getDefaultStack()), stack);
+                        } else {
+                            ItemStack itemStack = new ItemStack(item, 1);
+                            if (item.getDefaultStack().isOf(Arrays.stream(ingredients.getFirst().getMatchingStacks()).toList().getFirst().getItem())){
+                                itemStack.set(DataComponentTypes.ENCHANTMENTS, itemEnchantments);
+                            }
+                            outputStack.addOutput(itemStack);
                         }
                     }
                     outputs.add(outputStack);
@@ -472,8 +591,7 @@ public class UncraftingTableBlockEntity extends BlockEntity implements ExtendedS
                     .sorted()
                     .collect(Collectors.joining(","));
 
-            List<Item> finalItems = items;
-            Group group = groupKeyToGroup.computeIfAbsent(key, k -> new Group(new ArrayList<>(), finalItems));
+            Group group = groupKeyToGroup.computeIfAbsent(key, k -> new Group(new ArrayList<>(), items));
             group.positions.add(i);
         }
 
@@ -561,7 +679,7 @@ public class UncraftingTableBlockEntity extends BlockEntity implements ExtendedS
             return result;
         }
 
-        List<T> firstList = lists.get(0);
+        List<T> firstList = lists.getFirst();
         List<List<T>> remainingLists = cartesianProduct(lists.subList(1, lists.size()));
 
         for (T item : firstList) {
@@ -629,6 +747,23 @@ public class UncraftingTableBlockEntity extends BlockEntity implements ExtendedS
 
     public void handleRecipeSelection(UncraftingTableRecipe recipe){
         this.currentRecipe = recipe;
+
+        if(!hasRecipe()){
+            if (this.getStack(0).isEmpty()){
+                this.status = NO_RECIPE;
+            }
+            else {
+                this.status = NO_SUITABLE_OUTPUT_SLOT;
+            }
+        }
+        else{
+            if (hasEnoughExperience()){
+                this.status = -1;
+            }
+            else{
+                this.status = NO_ENOUGH_EXPERIENCE;
+            }
+        }
     }
 
     private int getExperience() {
@@ -659,16 +794,10 @@ public class UncraftingTableBlockEntity extends BlockEntity implements ExtendedS
 
     private boolean hasEnoughExperience(){
         if (UncraftEverythingConfig.experienceType.equals(UncraftEverythingConfig.ExperienceType.POINT)){
-            if (player.totalExperience < getExperience() && !player.isCreative()) {
-                player.sendMessage(Text.literal("You don't have enough experience points to uncraft this item!"), false);
-                return false;
-            }
+            return player.totalExperience >= getExperience() || player.isCreative();
         }
         else if (UncraftEverythingConfig.experienceType.equals(UncraftEverythingConfig.ExperienceType.LEVEL)){
-            if (player.experienceLevel < getExperience() && !player.isCreative()) {
-                player.sendMessage(Text.literal("You don't have enough experience levels to uncraft this item!"), false);
-                return false;
-            }
+            return player.experienceLevel >= getExperience() || player.isCreative();
         }
         return true;
     }
